--- a/package.xml
+++ b/package.xml
@@ -50,7 +50,11 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <exec_depend>message_runtime</exec_depend>
-
+  <exec_depend>panda_moveit_config</exec_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>moveit_msgs</build_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
