--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>final-project-group-4-inc</name>
+  <name>group4</name>
+  <!-- <name>final-project-group-4-inc</name> -->
   <version>0.0.0</version>
   <description>The final-project-group-4-inc package</description>
 
@@ -49,6 +50,10 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>message_generation</build_depend>
+  <depend>std_msgs</depend>
+  <exec_depend>message_runtime</exec_depend>
+  <depend>geometry_msgs</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
