Syncing commits Nov 16

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(final-project-group-4-inc)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
 rospy
+smach
 std_msgs
 message_generation
 sensor_msgs
@@ -111,7 +112,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES final-project-group-4-inc
- CATKIN_DEPENDS rospy std_msgs message_generation sensor_msgs moveit_msgs moveit_commander geometry_msgs
+ CATKIN_DEPENDS rospy smach std_msgs message_generation sensor_msgs moveit_msgs moveit_commander geometry_msgs
 #  DEPENDS system_lib
 )
 
@@ -165,7 +166,7 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS nodes/TaskMaster
+catkin_install_python(PROGRAMS nodes/TaskMaster nodes/TaskCommander
 #   scripts/my_python_script
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
