--- a/package.xml
+++ b/package.xml
@@ -14,7 +14,7 @@
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -60,7 +60,10 @@
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>rviz</exec_depend>
-  
+  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>franka_gazebo</exec_depend>
+  <exec_depend>panda_moveit_config</exec_depend>
+
   <build_depend>geometry_msgs</build_depend>
   <build_depend>moveit_msgs</build_depend>
   <build_depend>moveit_commander</build_depend>
@@ -68,7 +71,9 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <build_depend>smach</build_depend>
+  <build_depend>franka_gripper</build_depend>
+ 
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>moveit_msgs</build_export_depend>
@@ -78,6 +83,8 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_export_depend>tf2_ros</build_export_depend>
+  <build_export_depend>smach</build_export_depend>
+  <build_export_depend>franka_gripper</build_export_depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
