--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,7 @@ franka_gripper
 ## Uncomment this if the package has a setup.py. This macro ensures
 ## modules and global scripts declared therein get installed
 ## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
+catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
@@ -178,7 +178,7 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS nodes/TaskMaster nodes/TaskCommander nodes/smach_viewer nodes/xdot
+catkin_install_python(PROGRAMS nodes/TaskMaster nodes/TaskCommander nodes/smach_viewer
 #   scripts/my_python_script
 nodes/manipulation_cap
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
