Fixed Catkin_lint errors
Added franka_gripper and franka_gazebo to package.xml, CMakeLists
Corrected shebang on manipulation_pen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ generate_messages(
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES final-project-group-4-inc
- CATKIN_DEPENDS rospy smach std_msgs message_generation sensor_msgs moveit_msgs moveit_commander geometry_msgs message_runtime
+ CATKIN_DEPENDS franka_gripper rospy smach std_msgs message_generation sensor_msgs moveit_msgs moveit_commander geometry_msgs message_runtime
 #  DEPENDS system_lib
 )
 
