test bridge node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,7 @@ include_directories(
 catkin_install_python(PROGRAMS nodes/TaskMaster nodes/TaskCommander
 #   scripts/my_python_script
 nodes/manipulation_cap
+nodes/bridge
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
