--- a/package.xml
+++ b/package.xml
@@ -72,6 +72,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <build_depend>smach</build_depend>
+  <build_depend>roslib</build_depend>
 
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>panda_moveit_config</exec_depend>
