Added functionality for moves local to each tray
Created new srvs: LocationMove and TrayLocationMove
Local Manipulation is setup with TrayLocationMove for now. Might not need the other

Commented scene.yaml for easier consulation
Added manipulation_local node and respective srvs to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,8 @@ add_service_files(
   GripperClose.srv
   PoseMove.srv
   DeltaMove.srv
+  LocationMove.srv
+  TrayLocationMove.srv
   GetState.srv
   GetPose.srv
   GetStringList.srv
@@ -201,6 +203,7 @@ nodes/plan_scene
 nodes/manipulation_pen
 nodes/debug_manipulation
 nodes/manipulation_macro_a
+nodes/manipulation_local
 nodes/limit_set
 nodes/bridge
 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
