Added pick'place'press seq test
Yet to demarkate btwn test via sim and test via real robot
slight correction in limit_set node: duplicated service name
Enabled testing in CMakeLists.txt and package.xml
Will delete test_SIM_singlePPP when self.sim is functional in test_singlePickPlacePressSequence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -249,3 +249,8 @@ DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+if(CATKIN_ENABLE_TESTING)
+    find_package(rostest REQUIRED)
+    add_rostest(test/single_ppp_sequence.test)
+endif()
