Added full pick and place sequences as services
manipualtion_pnp
/pnpMarker and /pnpCap with pickLocation and placeLocation
PickNPlace.srv
Updated Cmakelist

manipulation_local node type
Set Caps RPY explicitly
Relaxed goToTrayLocation orientation tolerance from 0.001 to 0.002
Added 0.2s sleep after each cartesian move before verification. Might not be necessary

single_ppp_sequence.test
Currently not retrieving services in the single_ppp node when running in non-simulation mode

test_singlePickPlacePressSequence.py
corrected disposal spelling and asserts
commented out large sections to debug the test run

verificationUtilities.py
converted orientation element into their absolutes before comparison.
can revert since the culprit issue has been discovered and correct.

Added pick and place node to the launch_robot launchfile
Added press node and srv to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,6 +81,8 @@ add_service_files(
   GotoPos.srv
   CollisionSet.srv
   GetMaxWrenches.srv
+  Press.srv
+  PickNPlace.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -204,6 +206,8 @@ nodes/manipulation_pen
 nodes/debug_manipulation
 nodes/manipulation_macro_a
 nodes/manipulation_local
+nodes/manipulation_press
+nodes/manipulation_pnp
 nodes/limit_set
 nodes/bridge
 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
