--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,7 +179,7 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS nodes/TaskMaster nodes/TaskCommander nodes/smach_viewer
+catkin_install_python(PROGRAMS nodes/TaskMaster nodes/TaskCommander
 #   scripts/my_python_script
 nodes/manipulation_cap
 nodes/plan_scene
