--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,7 +188,7 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-catkin_install_python(PROGRAMS nodes/TaskMaster nodes/TaskCommander
+catkin_install_python(PROGRAMS nodes/TaskMaster
 #   scripts/my_python_script
 nodes/manipulation_cap
 nodes/plan_scene
