--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,5 +250,8 @@ DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 
 if(CATKIN_ENABLE_TESTING)
     find_package(rostest REQUIRED)
-    add_rostest(test/single_ppp_sequence.test)
+    # add_rostest(
+    #   # test/single_ppp_sequence.test
+    # )
+    catkin_add_nosetests(test)
 endif()
