--- a/package.xml
+++ b/package.xml
@@ -102,6 +102,7 @@
   <build_export_depend>franka_gripper</build_export_depend>
 
   <test_depend>rostest</test_depend>
+  <test_depend>rosunit</test_depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
