--- a/config/scene.yaml
+++ b/config/scene.yaml
@@ -8,14 +8,28 @@ o1: 0.0
 o2: 0.0 
 o3: 0.0 
 
-x1: 0.478 ## ASSEMBLY center location
-y1: 0.0
+## ASSEMBLY center location
+x1: 0.4818641
+y1: 0.000193013
+z11: 0.35
+z12: 0.27
+z13: 0.25
+z14: 0.23
+z15: 0.20462
 
-x2: 0.339 ## MARKERS center location
-y2: -0.196
+## MARKERS center location
+x2: 0.3415 
+y2: -0.199562
+z21: 0.35
+z22: 0.27
+z23: 0.19962
 
-x3: 0.339 ## CAPS center location
+## CAPS center location
+x3: 0.343 
 y3: 0.21
+z31: 0.35
+z32: 0.145
+z33: 0.124
 
 r: 0.0095 ## estimate of marker radius
 
@@ -23,13 +37,15 @@ h11: 0.019 ## estimates for cylinder heights
 h12: 0.019
 h13: 0.01
 
-pitch_1_x: 0.051
-pitch_1_y: 0.076
+pitch_1_x: 0.0508 #0.051
+pitch_1_y: 0.0762 #0.076
 
-pitch_2_x: 0.051
-pitch_2_y: 0.076
+pitch_2_x: 0.0508 #0.051
+pitch_2_y: 0.0762 #0.076
 
-pitch_3_x: 0.051
-pitch_3_y: 0.062
+pitch_3_x: 0.0508 #0.051
+pitch_3_y: 0.0635 #0.062
+
+
 
 
