--- a/config/scene.yaml
+++ b/config/scene.yaml
@@ -4,11 +4,12 @@ wid: 0.1778
 h1:  0.051 ## height of the marker and assembly 
 h2: 0.01 ## height of cap tray, estimate
 
+#Tray orientations
 o1: 0.0  
 o2: 0.0 
 o3: 0.0 
 
-## ASSEMBLY center location
+## ASSEMBLY coordinates
 x1: 0.4818641
 y1: 0.000193013
 z11: 0.35
@@ -17,14 +18,14 @@ z13: 0.25
 z14: 0.23
 z15: 0.20462
 
-## MARKERS center location
+## MARKERS coordinates
 x2: 0.3415 
 y2: -0.199562
 z21: 0.35
 z22: 0.27
 z23: 0.19962
 
-## CAPS center location
+## CAPS coordinates
 x3: 0.343 
 y3: 0.21
 z31: 0.35
