--- a/package.xml
+++ b/package.xml
@@ -62,11 +62,11 @@
   <exec_depend>rviz</exec_depend>
   <exec_depend>smach</exec_depend>
   <exec_depend>message_runtime</exec_depend>
-  <exec_depend>franka_gazebo</exec_depend>
   <exec_depend>panda_moveit_config</exec_depend>
   <exec_depend>realsense2_camera</exec_depend>
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>panda_moveit_config</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
   
 
 
@@ -80,14 +80,13 @@
   <build_depend>message_generation</build_depend>
   <build_depend>smach</build_depend>
   <build_depend>franka_gripper</build_depend>
- 
+  <build_depend>roslib</build_depend>
+
 
   <build_export_depend>franka_gripper</build_export_depend>
 
   <exec_depend>message_runtime</exec_depend>
   <exec_depend>panda_moveit_config</exec_depend>
-  <exec_depend>franka_gazebo</exec_depend>
-
 
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>smach</build_export_depend>
