--- a/package.xml
+++ b/package.xml
@@ -8,7 +8,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="hawk@todo.todo">hawk</maintainer>
+  <maintainer email="iankennedy2022@u.northwestern.edu">hawk</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
